# vibe-light-mcp

./: .coverage  .dockerignore  .gitignore  README.md  cascade_bridge.py  context_engine.py  execution_engine.py  knowledge_updater.py  main.py  monitor.sh  pyproject.toml  usage_tracker.py
.agents/workflows/: create-pr.md
.github/workflows/: ci.yml
deploy/compose/: .env.example  docker-compose.yml
deploy/docker/: Dockerfile  entrypoint.sh
deploy/launchd/: com.mcp.chromadb.plist
deploy/systemd/: chromadb.service
docs/: mcp_rules.md  mcp_system_prompt.md
scripts/: backup_chroma.sh  com.mcp.chromadb.plist  import_skills.sh  migrate_embeddings_cli.py  monitor.sh  seed_skills.py  start_chroma.sh  test_sse_client.py
src/: __init__.py  config.py  server.py
src/db/: __init__.py  chroma_manager.py  embedding.py  migrate_embeddings.py
src/engine/: __init__.py  context.py  execution.py  knowledge.py  stack_detector.py
src/tools/: __init__.py  helpers.py  knowledge.py  memory.py  system.py  workspace.py
src/utils/: __init__.py  markdown_utils.py  text_splitter.py  usage_tracker.py
tech_stacks/: registry.yaml
tech_stacks/android_kotlin/: rules.md  skills.md
tech_stacks/flutter_dart/: rules.md  skills.md
tech_stacks/ios_swift/: rules.md  skills.md
tech_stacks/kmp/: rules.md  skills.md
tech_stacks/python/: rules.md  skills.md
tech_stacks/react_native/: rules.md  skills.md
tech_stacks/vue_js/: rules.md  skills.md
tests/: __init__.py  test_execution_security.py  test_security_fixes.py  test_text_splitter.py  test_workspace.py
(+14 files in other folders)
