[project]
name = "local-mcp-server"
version = "1.0.0"
description = "Local Model Context Protocol Server for Mobile & Web Tech Stacks"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "chromadb>=0.4.20",
    "onnxruntime>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
