[project]
name = "local-mcp-server"
version = "1.0.6"
description = "Local Model Context Protocol Server for Mobile & Web Tech Stacks"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "chromadb>=0.4.20",
    "onnxruntime>=1.17.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Better embeddings (384d L12 vs 256d L6), but pulls ~800MB torch
quality = ["sentence-transformers>=2.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
